--- a/DevTKSS.MyManufacturerERP.Server/Properties/launchSettings.json
+++ b/DevTKSS.MyManufacturerERP.Server/Properties/launchSettings.json
@@ -15,6 +15,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "scalar/v1",
+      "hotReloadEnabled": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
