--- a/DevTKSS.MyManufacturerERP.Server/appsettings.json
+++ b/DevTKSS.MyManufacturerERP.Server/appsettings.json
@@ -18,7 +18,7 @@
         }
       }
     ]
-    
+
   },
   "Logging": {
     "LogLevel": {
@@ -26,5 +26,24 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Sevdesk": { // Sevdesk v1 api I am still set to might not be available as they introduced a Breaking Change that made their product not usable properly for many Customers
+      "Authorization": "https://my.sevdesk.de/api/v1/", // Authority Unknown, as the token is provided
+      "ClientId": "SEVDESK_CLIENT_ID",
+      "ClientSecret": "SEVDESK_API_X_KEY",
+      "Scope": "openid profile email",
+      "CallbackPath": "/sevdesk-auth-callback" // unknown as you will most likly not need it. if you dont have entrance to your token check out their Reference: https://api.sevdesk.de/#section/Authentication-and-Authorization
+    },
+    "Etsy": {
+      "Authorization": "https://www.etsy.com/oauth/connect",
+      "Token": "https://api.etsy.com/v3/public/oauth/token",
+      "UserInformation": "https://api.etsy.com/v3/application/users/me",
+      "ClientId": "YOUR_ETSY_CLIENT_ID", // TODO: Use e.g. Azure KeyVault Storage to store ClientId in production
+      "ClientSecret": "YOUR_ETSY_KEYSTRING", // TODO: Use e.g. Azure KeyVault Storage to store ClientSecret in production
+      "Scope": "shops_r email_r", // TODO: Insert Production scope here, e.g. "address_r billing_r cart_r email_r listings_r profile_r shops_r transactions_r"
+      "CallbackPath": "/etsy-auth-callback", // TODO: Set CallbackPath in Etsy configuration of your App: https://www.etsy.com/developers/your-apps
+      "UsePkce": true
+    }
+  }
 }
