chore(settings): Update launchsettings and appsettings with the standard ports using the microsoft docs They are filing also a https profile but no inspect url. But they are advising to use "Browser link enabled" and "Browserlink Dashboard" for debugging instead and setting hotReloadEnabled

--- a/DevTKSS.MyManufacturerERP.Server/appsettings.Development.json
+++ b/DevTKSS.MyManufacturerERP.Server/appsettings.Development.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "Authentication": {
     "Sevdesk": { // Sevdesk v1 api I am still set to might not be available as they introduced a Breaking Change that made their product not usable properly for many Customers
       "ClientId": "SEVDESK_CLIENT_ID",
