--- a/DevTKSS.MyManufacturerERP/appsettings.json
+++ b/DevTKSS.MyManufacturerERP/appsettings.json
@@ -2,16 +2,11 @@
   "AppConfig": {
     "Environment": "Production"
   },
-  "ApiClient": {
-    "UseNativeHandler": true
-  },
-  "OidcAuthentication": {
-    "Authority": "",
-    "ClientId": "",
-    "ClientSecret": "",
-    "Scope": "",
-    "RedirectUri": "",
-    "PostLogoutRedirectUri": ""
+  "WebAuth":
+  {
+    "LoginStartUri": "https://my-manufacturer-erp.com/login",
+    "LogoutStartUri": "https://my-manufacturer-erp.com/logout",
+    "LoginCallbackUri": "https://my-manufacturer-erp.com/callback"
   },
   "LocalizationConfiguration": {
     "Cultures": [
