--- a/DevTKSS.MyManufacturerERP.Server/Properties/launchSettings.json
+++ b/DevTKSS.MyManufacturerERP.Server/Properties/launchSettings.json
@@ -9,7 +9,7 @@
       },
       "dotnetRunMessages": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "http://localhost:5001;https://localhost:5002"
+      "applicationUrl": "https://localhost:5001;http://localhost:5002"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -38,8 +38,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5001",
-      "sslPort": 5002
+      "applicationUrl": "https://localhost:44334",
+      "sslPort": 44334
     }
   }
 }
