--- a/DevTKSS.MyManufacturerERP/appsettings.development.json
+++ b/DevTKSS.MyManufacturerERP/appsettings.development.json
@@ -1,9 +1,9 @@
 {
   "AppConfig": {
     "Environment": "Development"
- },
-  "ApiClient": {
-    "Url": "https://localhost:5002",
-    "UseNativeHandler": true
+  },
+  "WebAuth": {
+    "LoginStartUri": "https://localhost:5001/login",
+    "LogoutStartUri": "https://localhost:5001/logout"
   }
 }
