--- a/DevTKSS.MyManufacturerERP.Server/DevTKSS.MyManufacturerERP.Server.csproj
+++ b/DevTKSS.MyManufacturerERP.Server/DevTKSS.MyManufacturerERP.Server.csproj
@@ -45,6 +45,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Scalar.AspNetCore" />
+    <PackageReference Include="Scalar.AspNetCore.Microsoft"/>
   </ItemGroup>
 
   <ProjectExtensions>
