feat(WebAPI): Add properly working Reference Project of Server which is not using any Uno Stuff

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,26 +7,24 @@
   -->
   <ItemGroup>
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
-
     <PackageVersion Include="Microsoft.Kiota.Bundle" Version="1.19.0" />
     <PackageVersion Include="Microsoft.Kiota.Abstractions" Version="1.19.0" />
     <PackageVersion Include="Dotenv.Net" Version="4.0.0" />
   </ItemGroup>
-
-    <ItemGroup Label="OpenApi">
-        
-    </ItemGroup>
+  <ItemGroup Label="OpenApi">
+  </ItemGroup>
   <ItemGroup Label="Serilog">
     <PackageVersion Include="Serilog.Expressions" Version="5.0.0" />
     <PackageVersion Include="Serilog.AspNetCore" Version="9.0.0" />
   </ItemGroup>
   <ItemGroup Condition="$(UsingUnoSdk) != 'true'">
-    <PackageVersion Include="Uno.Wasm.Bootstrap.Server" Version="9.0.19" />
+    <PackageVersion Include="Uno.Wasm.Bootstrap.Server" Version="9.0.20" />
   </ItemGroup>
   <ItemGroup Label="EntityFramework">
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.7"/>
     <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.7" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.6" />
+    <PackageVersion Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.7" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7" />
   </ItemGroup>
@@ -37,7 +35,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageVersion>
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageVersion Include="Scalar.AspNetCore" Version="2.6.1" />
+    <PackageVersion Include="Scalar.AspNetCore" Version="2.6.3" />
+    <PackageVersion Include="Scalar.AspNetCore.Microsoft" Version="2.6.3" />
   </ItemGroup>
   <ItemGroup Label="General Test Packages">
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
@@ -47,7 +46,7 @@
   </ItemGroup>
   <ItemGroup Label="xUnit Test Packages">
     <PackageVersion Include="xunit" Version="2.9.3" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.2" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.3" />
   </ItemGroup>
   <ItemGroup Label="NUnit Test Packages">
     <PackageVersion Include="NUnit" Version="4.3.2" />
