feat: Update http to https on Wasm

--- a/src/DevTKSS.MyManufacturerERP.Server/Properties/launchSettings.json
+++ b/src/DevTKSS.MyManufacturerERP.Server/Properties/launchSettings.json
@@ -9,21 +9,21 @@
     }
   },
   "profiles": {
-    "DevTKSS.MyManufacturerERP.Server": {
+    "DevTKSS.MyManufacturerERP.Server https": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "",
+      //"launchUrl": "",
+       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+      "applicationUrl": "https://localhost:5002;http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "http://localhost:5001;https://localhost:5002"
+      }
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "",
+      //"launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
