--- a/src/DevTKSS.MyManufacturerERP.Server/appsettings.json
+++ b/src/DevTKSS.MyManufacturerERP.Server/appsettings.json
@@ -28,8 +28,8 @@
   },
   "AllowedHosts": "https://my-manufacturer-erp.com;https://app.my-manufacturer-erp.com",
   "Authentication": {
-    "DefaultScheme": "Cookies", // Default scheme for authentication, can be overridden in specific controllers or actions"
-    "DefaultChallengeScheme": "oAuth2", // Default challenge scheme for OAuth2 authentication"
+    // "DefaultScheme": "Cookies", // Default scheme for authentication, can be overridden in specific controllers or actions"
+    // "DefaultChallengeScheme": "oAuth2", // Default challenge scheme for OAuth2 authentication"
     "Sevdesk": { // Sevdesk v1 api I am still set to might not be available as they introduced a Breaking Change that made their product not usable properly for many Customers
       "Authorization": "https://my.sevdesk.de/api/v1/", // Authority Unknown, as the token is provided
       "ClientId": "SEVDESK_CLIENT_ID",
