chore: Update files, make sure WebApi builds fine
BUG: Server Project does still not build properly, fails on

--- a/src/DevTKSS.MyManufacturerERP.Server/DevTKSS.MyManufacturerERP.Server.csproj
+++ b/src/DevTKSS.MyManufacturerERP.Server/DevTKSS.MyManufacturerERP.Server.csproj
@@ -23,7 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <!--<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />-->
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
   </ItemGroup>
 
 
@@ -46,7 +46,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Scalar.AspNetCore" />
-    <PackageReference Include="Scalar.AspNetCore.Microsoft"/>
+    <PackageReference Include="Scalar.AspNetCore.Microsoft" />
   </ItemGroup>
 
   <ProjectExtensions>
