--- a/src/DevTKSS.MyManufacturerERP/appsettings.development.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.development.json
@@ -3,7 +3,8 @@
     "Environment": "Development"
   },
   "WebAuth": {
-    "LoginStartUri": "https://localhost:5001/login",
-    "LogoutStartUri": "https://localhost:5001/logout"
+    "LoginStartUri": "https://localhost:5002/login",
+    "LogoutStartUri": "https://localhost:5002/logout",
+    "LoginCallbackUri": "https://localhost:5002/callback"
   }
 }
