--- a/src/DevTKSS.MyManufacturerERP.Server/appsettings.json
+++ b/src/DevTKSS.MyManufacturerERP.Server/appsettings.json
@@ -39,8 +39,8 @@
     },
     "Etsy": {
       "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
-      "TokenEndpoint": "https://api.etsy.com/v3/public/oauth/token",
-      "UserInformationEndpoint": "https://api.etsy.com/v3/application/users/me",
+      "TokenEndpoint": "https://openapi.etsy.com/v3/public/oauth/token",
+      "UserInformationEndpoint": "https://openapi.etsy.com/v3/application/users/me",
       "ClientId": "YOUR_ETSY_CLIENT_ID", // TODO: Use e.g. Azure KeyVault Storage to store ClientId in production
       "ClientSecret": "YOUR_ETSY_KEYSTRING", // TODO: Use e.g. Azure KeyVault Storage to store ClientSecret in production
       "Scope": "shops_r email_r", // TODO: Insert Production scope here, e.g. "address_r billing_r cart_r email_r listings_r profile_r shops_r transactions_r"
