chore(WebAPI): Add Sample Content for OpenIdDict Sample with WinUI3

--- a/src/DevTKSS.MyManufacturerERP/DevTKSS.MyManufacturerERP.csproj
+++ b/src/DevTKSS.MyManufacturerERP/DevTKSS.MyManufacturerERP.csproj
@@ -52,4 +52,8 @@
     <ProjectReference Include="..\DevTKSS.MyManufacturerERP.DataContracts\DevTKSS.MyManufacturerERP.DataContracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="..\AppData\*.json" CopyToOutputDirectory="PreserveNewest" LinkBase="AppData" />
+  </ItemGroup>
 </Project>
+<!---->
