--- a/src/DevTKSS.MyManufacturerERP.Server.WebApi/DevTKSS.MyManufacturerERP.WebApi.csproj
+++ b/src/DevTKSS.MyManufacturerERP.Server.WebApi/DevTKSS.MyManufacturerERP.WebApi.csproj
@@ -8,13 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Assets\*" CopyToOutputDirectory="PreserveNewest" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\DevTKSS.MyManufacturerERP.DataContracts\DevTKSS.MyManufacturerERP.DataContracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" />
+    <PackageReference Include="OpenIddict.AspNetCore" />
+    <PackageReference Include="OpenIddict.EntityFrameworkCore" />
+    <PackageReference Include="OpenIddict.Server.AspNetCore" />
+    <PackageReference Include="OpenIddict.Validation.AspNetCore" />
+  </ItemGroup>
   <ItemGroup Label="EntityFramework">
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
@@ -35,7 +38,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" />
     <PackageReference Include="Scalar.AspNetCore" />
-    <PackageReference Include="Scalar.AspNetCore.Microsoft"/>
+    <PackageReference Include="Scalar.AspNetCore.Microsoft" />
   </ItemGroup>
 
  </Project>
