--- a/src/DevTKSS.MyManufacturerERP.Server/appsettings.json
+++ b/src/DevTKSS.MyManufacturerERP.Server/appsettings.json
@@ -28,8 +28,7 @@
   },
   "AllowedHosts": "https://my-manufacturer-erp.com;https://app.my-manufacturer-erp.com",
   "Authentication": {
-    // "DefaultScheme": "Cookies", // Default scheme for authentication, can be overridden in specific controllers or actions"
-    // "DefaultChallengeScheme": "oAuth2", // Default challenge scheme for OAuth2 authentication"
+    "DefaultScheme": "Cookies", // Default scheme for authentication, can be overridden in specific controllers or actions"
     "Sevdesk": { // Sevdesk v1 api I am still set to might not be available as they introduced a Breaking Change that made their product not usable properly for many Customers
       "Authorization": "https://my.sevdesk.de/api/v1/", // Authority Unknown, as the token is provided
       "ClientId": "SEVDESK_CLIENT_ID",
@@ -41,8 +40,8 @@
       "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
       "TokenEndpoint": "https://openapi.etsy.com/v3/public/oauth/token",
       "UserInformationEndpoint": "https://openapi.etsy.com/v3/application/users/me",
-      "ClientId": "YOUR_ETSY_CLIENT_ID", // TODO: Use e.g. Azure KeyVault Storage to store ClientId in production
-      "ClientSecret": "YOUR_ETSY_KEYSTRING", // TODO: Use e.g. Azure KeyVault Storage to store ClientSecret in production
+      "ClientId": "", // TODO: Use e.g. Azure KeyVault Storage to store ClientId in production
+      "ClientSecret": "", // TODO: Use e.g. Azure KeyVault Storage to store ClientSecret in production
       "Scope": "shops_r email_r", // TODO: Insert Production scope here, e.g. "address_r billing_r cart_r email_r listings_r profile_r shops_r transactions_r"
       "CallbackPath": "/etsy-auth-callback", // TODO: Set CallbackPath in Etsy configuration of your App: https://www.etsy.com/developers/your-apps
       "UsePkce": true
