feat(Auth): Add oAuthProvider Implementation

--- a/src/DevTKSS.MyManufacturerERP/DevTKSS.MyManufacturerERP.csproj
+++ b/src/DevTKSS.MyManufacturerERP/DevTKSS.MyManufacturerERP.csproj
@@ -29,6 +29,8 @@
       LoggingSerilog;
       MVUX;
       Configuration;
+      <!--HttpKiota;-->
+      HttpRefit;
       Serialization;
       Localization;
       Authentication;
