--- a/src/DevTKSS.MyManufacturerERP/appsettings.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.json
@@ -1,9 +1,12 @@
 {
   "AppConfig": {
+    "Title": "My Manufacturer ERP",
     "Environment": "Production"
   },
-  "WebAuth":
-  {
+  "ApiClient": {
+    "UseNativeHandler": true
+  },
+  "WebAuth": {
     "LoginStartUri": "https://my-manufacturer-erp.com/login",
     "LogoutStartUri": "https://my-manufacturer-erp.com/logout",
     "LoginCallbackUri": "https://my-manufacturer-erp.com/callback"
@@ -14,6 +17,21 @@
       "fr",
       "pt-BR",
       "en"
+    ]
+  },
+  "EtsyOAuthOptions": {
+    "Url": "https://openapi.etsy.com",
+    "UseNativeHandler": true,
+
+    "AuthorizationEndpoint": "https://www.etsy.com/oauth/connect",
+    "TokenEndpoint": "https://api.etsy.com/v3/public/oauth/token",
+    "RedirectUri": "https://my-manufacturer-erp.com/callback",
+    "ClientId": "",
+    "Scopes": [
+      "listings_r",
+      "listings_w",
+      "shops_r",
+      "shops_w"
     ]
   }
 }
