--- a/src/DevTKSS.MyManufacturerERP/appsettings.development.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.development.json
@@ -1,10 +1,28 @@
 {
   "AppConfig": {
+    "Title": "My Manufacturer ERP - Development",
     "Environment": "Development"
+  },
+  "ApiClient": {
+    "Url": "https://localhost:5001",
+    "UseNativeHandler": true
   },
   "WebAuth": {
     "LoginStartUri": "https://localhost:5002/login",
     "LogoutStartUri": "https://localhost:5002/logout",
     "LoginCallbackUri": "https://localhost:5002/callback"
+  },
+  "EtsyOAuthOptions": {
+    "UseNativeHandler": true,
+
+    "RedirectUri": "https://localhost:5002/callback",
+    "ClientId": "your-client-id-aka-keystring",
+    "Scopes": [
+      "listings_r",
+      "listings_w",
+      "shops_r",
+      "shops_w"
+    ]
   }
-}
+} 
+
