--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -9,11 +9,19 @@
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageVersion Include="Microsoft.Kiota.Bundle" Version="1.19.0" />
     <PackageVersion Include="Microsoft.Kiota.Abstractions" Version="1.19.0" />
+  </ItemGroup>
+
+  <ItemGroup Label="Auth Packages">
     <PackageVersion Include="Dotenv.Net" Version="4.0.0" />
+    <PackageVersion Include="OpenIddict.Abstractions" Version="7.0.0" />
+    <PackageVersion Include="OpenIddict.Client" Version="7.0.0" />
+    <!--<PackageVersion Include="OpenIddict.Client.SystemIntegration" Version="7.0.0" />-->
+    <PackageVersion Include="OpenIddict.Client.SystemNetHttp" Version="7.0.0" />
+    <PackageVersion Include="OpenIddict.Client.WebIntegration" Version="7.0.0" />
+    <PackageVersion Include="OpenIddict.EntityFrameworkCore" Version="7.0.0" />
     <PackageVersion Include="OpenIddict.EntityFrameworkCore" Version="7.0.0" />
     <PackageVersion Include="OpenIddict.Server.AspNetCore" Version="7.0.0" />
     <PackageVersion Include="OpenIddict.Validation.AspNetCore" Version="7.0.0" />
-    <!--<PackageVersion Include="Yllibed.HttpServer" Version="1.0.0-dev.11" />-->
   </ItemGroup>
   <ItemGroup>
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.3.0" />
@@ -33,6 +41,7 @@
     <PackageVersion Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.7" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
   </ItemGroup>
   <ItemGroup Label="OpenApi Packages">
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
@@ -41,8 +50,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageVersion>
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageVersion Include="Scalar.AspNetCore" Version="2.6.4" />
-    <PackageVersion Include="Scalar.AspNetCore.Microsoft" Version="2.6.4" />
+    <PackageVersion Include="Scalar.AspNetCore" Version="2.6.5" />
+    <PackageVersion Include="Scalar.AspNetCore.Microsoft" Version="2.6.5" />
   </ItemGroup>
   <ItemGroup Label="General Test Packages">
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
