--- a/src/DevTKSS.MyManufacturerERP.Server.WebApi/appsettings.json
+++ b/src/DevTKSS.MyManufacturerERP.Server.WebApi/appsettings.json
@@ -36,7 +36,7 @@
         "ClientId": "YOUR_ETSY_CLIENT_ID", // TODO: Use e.g. Azure KeyVault Storage to store ClientId in production
         "ClientSecret": "YOUR_ETSY_KEYSTRING", // TODO: Use e.g. Azure KeyVault Storage to store ClientSecret in production
         "Scope": "shops_r email_r", // TODO: Insert Production scope here, e.g. "address_r billing_r cart_r email_r listings_r profile_r shops_r transactions_r"
-        "CallbackPath": "/etsy-auth-callback", // TODO: Set CallbackPath in Etsy configuration of your App: https://www.etsy.com/developers/your-apps
+        "CallbackPath": "/callback", // TODO: Set CallbackPath in Etsy configuration of your App: https://www.etsy.com/developers/your-apps
       "UsePkce": true
     }
   }
