--- a/src/DevTKSS.MyManufacturerERP/appsettings.development.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.development.json
@@ -14,7 +14,7 @@
   },
   "EtsyOAuthOptions": {
     "UseNativeHandler": true,
-
+    "Url": "https://openapi.etsy.com",
     "RedirectUri": "https://localhost:5002/callback",
     "ClientId": "your-client-id-aka-keystring",
     "Scopes": [
