--- a/src/DevTKSS.MyManufacturerERP.Server.WebApi/Web.csproj
+++ b/src/DevTKSS.MyManufacturerERP.Server.WebApi/Web.csproj
@@ -10,7 +10,11 @@
   </PropertyGroup>
  
   <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" />
+    <PackageReference Include="AutoMapper" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" />
     <PackageReference Include="OpenIddict.AspNetCore" />
     <PackageReference Include="OpenIddict.EntityFrameworkCore" />
     <PackageReference Include="OpenIddict.Server.AspNetCore" />
