--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -6,11 +6,11 @@
     See https://aka.platform.uno/using-uno-sdk#implicit-packages for more information regarding the Implicit Packages.
   -->
   <ItemGroup>
+    <PackageVersion Include="FluentValidation" Version="12.0.0" />
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageVersion Include="Microsoft.Kiota.Bundle" Version="1.19.0" />
     <PackageVersion Include="Microsoft.Kiota.Abstractions" Version="1.19.0" />
   </ItemGroup>
-
   <ItemGroup Label="Auth Packages">
     <PackageVersion Include="Dotenv.Net" Version="4.0.0" />
     <PackageVersion Include="OpenIddict.Abstractions" Version="7.0.0" />
@@ -18,7 +18,6 @@
     <!--<PackageVersion Include="OpenIddict.Client.SystemIntegration" Version="7.0.0" />-->
     <PackageVersion Include="OpenIddict.Client.SystemNetHttp" Version="7.0.0" />
     <PackageVersion Include="OpenIddict.Client.WebIntegration" Version="7.0.0" />
-    <PackageVersion Include="OpenIddict.EntityFrameworkCore" Version="7.0.0" />
     <PackageVersion Include="OpenIddict.EntityFrameworkCore" Version="7.0.0" />
     <PackageVersion Include="OpenIddict.Server.AspNetCore" Version="7.0.0" />
     <PackageVersion Include="OpenIddict.Validation.AspNetCore" Version="7.0.0" />
@@ -33,6 +32,12 @@
   </ItemGroup>
   <ItemGroup Condition="$(UsingUnoSdk) != 'true'">
     <PackageVersion Include="Uno.Wasm.Bootstrap.Server" Version="9.0.20" />
+  </ItemGroup>
+  <ItemGroup Label="CA Packages">
+    <PackageVersion Include="Ardalis.GuardClauses" Version="5.0.0" />
+    <PackageVersion Include="AutoMapper" Version="15.0.1" />
+    <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.7" />
   </ItemGroup>
   <ItemGroup Label="EntityFramework">
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
