--- a/src/DevTKSS.AspNet.Security.OAuth.Etsy/DevTKSS.AspNet.Security.OAuth.Etsy.csproj
+++ b/src/DevTKSS.AspNet.Security.OAuth.Etsy/DevTKSS.AspNet.Security.OAuth.Etsy.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OAuth" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
   <ItemGroup>
     <Using Include="Microsoft.AspNetCore.Authentication" />
