--- a/src/Temp.Extensibility.SystemAuthBrokerServer/Temp.Extensibility.DesktopAuthBroker.csproj
+++ b/src/Temp.Extensibility.SystemAuthBrokerServer/Temp.Extensibility.DesktopAuthBroker.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Uno.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net9.0-desktop;net9.0;net9.0-android;net9.0-ios;net9.0-browserwasm</TargetFrameworks>
+    <TargetFrameworks>net9.0-desktop;net9.0-android;net9.0-ios;net9.0-browserwasm</TargetFrameworks><!--net9.0;-->
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <OutputType>Library</OutputType>
@@ -9,14 +9,12 @@
     <UnoFeatures>
       Hosting;
       SkiaRenderer;
+      Configuration;
+      Logging;
     </UnoFeatures>
     
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Yllibed.HttpServer" />
   </ItemGroup>
-
-  <PropertyGroup>
-
-  </PropertyGroup>
 </Project>
