--- a/src/DevTKSS.MyManufacturerERP/appsettings.development.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.development.json
@@ -3,32 +3,31 @@
     "Title": "My Manufacturer ERP - Development",
     "Environment": "Development"
   },
-  "Web": {
+  "Custom": {
     "LoginStartUri": "https://www.etsy.com/oauth/connect",
-    "LoginCallbackUri": "https://localhost:5001/callback"
+    "LoginCallbackUri": "https://localhost:5001/etsy-auth-callback"
   },
   "ApiClient": {
-    "Url": "https://localhost:5002",
+    "Url": "https://openapi.etsy.com",
+    "ApiKey": "your-api-key-or-keystring-from-user-secrets",
     "UseNativeHandler": true
   },
-  "Authentication": {
-    "Etsy": {
-      "UseNativeHandler": true,
-      "Url": "https://openapi.etsy.com",
-      "RedirectUri": "/etsy-callback",
-      "ClientID": "your-client-id-aka-keystring",
-      "Scopes": [
-        "listings_r",
-        "listings_w",
-        "shops_r",
-        "shops_w"
-      ]
-    },
-    "Sevdesk": {
-      "UseNativeHandler": true,
-      "Url": "https://my.sevdesk.de/api/v1",
-      "ApiKey": "your-api-key-from-user-secrets"
-    }
+  "EtsyOAuth": {
+    "Url": "https://openapi.etsy.com/v3/public/oauth",
+    "RedirectUri": "/etsy-auth-callback",
+    "ClientID": "your-client-id-aka-keystring-from-user-secrets",
+    "Scopes": [
+      "listings_r",
+      "listings_w",
+      "shops_r",
+      "shops_w"
+    ]
+  },
+  "SevdeskApiKeyClient": {
+    "UseNativeHandler": true,
+    "Url": "https://my.sevdesk.de/api/v1",
+    "ApiKey": "your-api-key-from-user-secrets"
+
   }
 } 
 
