--- a/src/DevTKSS.MyManufacturerERP/appsettings.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.json
@@ -3,10 +3,18 @@
     "Title": "My Manufacturer ERP",
     "Environment": "Production"
   },
-  "WebAuth": {
-    "LoginStartUri": "https://my-manufacturer-erp.com/login",
+  "WebOAuth": {
+    "LoginStartUri": "https://www.etsy.com/oauth/connect",
     "LogoutStartUri": "https://my-manufacturer-erp.com/logout",
-    "LoginCallbackUri": "https://my-manufacturer-erp.com/callback"
+    "LoginCallbackUri": "https://my-manufacturer-erp.com/callback",
+    "AccessTokenKey": "access_token",
+    "RefreshTokenKey": "refresh_token",
+    "IdTokenKey": "user_id",
+    "OtherTokenKeys": [
+      {
+        "ShopIdTokenKey": "shop_id"
+      }
+    ]
   },
   "LocalizationConfiguration": {
     "Cultures": [
