--- a/src/DevTKSS.MyManufacturerERP/appsettings.development.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.development.json
@@ -3,7 +3,7 @@
     "Title": "My Manufacturer ERP - Development",
     "Environment": "Development"
   },
-  "Custom": {
+  "EtsyOAuth": {
     "LoginStartUri": "https://www.etsy.com/oauth/connect",
     "LoginCallbackUri": "https://localhost:5001/etsy-auth-callback"
   },
@@ -12,7 +12,7 @@
     "ApiKey": "your-api-key-or-keystring-from-user-secrets",
     "UseNativeHandler": true
   },
-  "EtsyOAuth": {
+  "EtsyOAuthOptions": {
     "Url": "https://openapi.etsy.com/v3/public/oauth",
     "RedirectUri": "/etsy-auth-callback",
     "ClientID": "your-client-id-aka-keystring-from-user-secrets",
