--- a/src/DevTKSS.MyManufacturerERP/appsettings.json
+++ b/src/DevTKSS.MyManufacturerERP/appsettings.json
@@ -3,12 +3,13 @@
     "Title": "My Manufacturer ERP",
     "Environment": "Production"
   },
-  "WebOAuth": {
+  "EtsyOAuth": {
     "LoginStartUri": "https://www.etsy.com/oauth/connect",
     "LogoutStartUri": "https://my-manufacturer-erp.com/logout",
     "LoginCallbackUri": "https://my-manufacturer-erp.com/callback",
     "AccessTokenKey": "access_token",
     "RefreshTokenKey": "refresh_token",
+    "ExpiresInKey": "expires_in",
     "IdTokenKey": "user_id",
     "OtherTokenKeys": [
       {
