--- a/src/OpenIddict.Client.UnoIntegrations/OpenIddict.Client.UnoIntegrations.csproj
+++ b/src/OpenIddict.Client.UnoIntegrations/OpenIddict.Client.UnoIntegrations.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UnoFeatures>
+      Hosting;
+      Toolkit;
+      Http;
+      Serialization;
+      logging;
+    </UnoFeatures>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" />
