--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -16,10 +16,10 @@
   <ItemGroup Label="Auth Packages">
     <PackageVersion Include="Dotenv.Net" Version="4.0.0" />
     <PackageVersion Include="OpenIddict.Abstractions" Version="7.0.0" />
-    <!--<PackageVersion Include="OpenIddict.Client" Version="7.0.0" />-->
-    <!--<PackageVersion Include="OpenIddict.Client.SystemIntegration" Version="7.0.0" />-->
-    <!--<PackageVersion Include="OpenIddict.Client.SystemNetHttp" Version="7.0.0" />
-    <PackageVersion Include="OpenIddict.Client.WebIntegration" Version="7.0.0" />-->
+    <PackageVersion Include="OpenIddict.Client" Version="7.0.0" />
+    <PackageVersion Include="OpenIddict.Client.SystemIntegration" Version="7.0.0" />
+    <PackageVersion Include="OpenIddict.Client.SystemNetHttp" Version="7.0.0" />
+    <PackageVersion Include="OpenIddict.Client.WebIntegration" Version="7.0.0" />
     <PackageVersion Include="OpenIddict.EntityFrameworkCore" Version="7.0.0" />
     <PackageVersion Include="OpenIddict.Server.AspNetCore" Version="7.0.0" />
     <PackageVersion Include="OpenIddict.Validation.AspNetCore" Version="7.0.0" />
@@ -47,7 +47,7 @@
     <PackageVersion Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.7" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.8" />
   </ItemGroup>
   <ItemGroup Label="OpenApi Packages">
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
