--- a/src/OpenIddict.Client.UnoIntegrations/OpenIddict.Client.UnoIntegrations.csproj
+++ b/src/OpenIddict.Client.UnoIntegrations/OpenIddict.Client.UnoIntegrations.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Uno.Sdk">
+<Project Sdk="Uno.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -19,9 +19,9 @@
     <PackageReference Include="OpenIddict.Client.SystemNetHttp" />
     <PackageReference Include="OpenIddict.Client.WebIntegration" />
     <PackageReference Include="OpenIddict.EntityFrameworkCore" />
-    <PackageReference Include="Microsoft.Net.Http.Headers" />
-    <PackageReference Include="Uno.Extensions.Hosting.WinUI" />
-    <!--<PackageReference Include="OpenIddict.Client.SystemIntegration" />-->
+    <!--<PackageReference Include="Microsoft.Net.Http.Headers" />-->
+    <!--<PackageReference Include="Uno.Extensions.Hosting.WinUI" />-->
+    <PackageReference Include="OpenIddict.Client.SystemIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Using Include="OpenIddict.Abstractions" />
