--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -13,20 +13,19 @@
     <PackageVersion Include="Yllibed.HttpServer" Version="1.0.0-dev.11" />
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
   </ItemGroup>
-  <ItemGroup Label="Auth Packages">
-    <PackageVersion Include="Dotenv.Net" Version="4.0.0" />
+  <!--<ItemGroup Label="Auth Packages">
     <PackageVersion Include="OpenIddict.Abstractions" Version="7.0.0" />
-    <!--<PackageVersion Include="OpenIddict.Client" Version="7.0.0" />-->
-    <!--<PackageVersion Include="OpenIddict.Client.SystemIntegration" Version="7.0.0" />-->
-    <!--<PackageVersion Include="OpenIddict.Client.SystemNetHttp" Version="7.0.0" />
-    <PackageVersion Include="OpenIddict.Client.WebIntegration" Version="7.0.0" />-->
+    <PackageVersion Include="OpenIddict.Client" Version="7.0.0" />
+    <PackageVersion Include="OpenIddict.Client.SystemIntegration" Version="7.0.0" />
+    <PackageVersion Include="OpenIddict.Client.SystemNetHttp" Version="7.0.0" />
+    <PackageVersion Include="OpenIddict.Client.WebIntegration" Version="7.0.0" />
     <PackageVersion Include="OpenIddict.EntityFrameworkCore" Version="7.0.0" />
     <PackageVersion Include="OpenIddict.Server.AspNetCore" Version="7.0.0" />
     <PackageVersion Include="OpenIddict.Validation.AspNetCore" Version="7.0.0" />
-  </ItemGroup>
+    <PackageVersion Include="OpenIddict.AspNetCore" Version="7.0.0" />
+  </ItemGroup>-->
   <ItemGroup>
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.3.0" />
-    <PackageVersion Include="OpenIddict.AspNetCore" Version="7.0.0" />
   </ItemGroup>
   <ItemGroup Label="Serilog">
     <PackageVersion Include="Serilog.Expressions" Version="5.0.0" />
@@ -38,26 +37,26 @@
   <ItemGroup Label="CA Packages">
     <PackageVersion Include="Ardalis.GuardClauses" Version="5.0.0" />
     <PackageVersion Include="AutoMapper" Version="15.0.1" />
-    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.7" />
+    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
   </ItemGroup>
   <ItemGroup Label="EntityFramework">
-    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.7" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
+    <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.8" />
+    <PackageVersion Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.8" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
   </ItemGroup>
   <ItemGroup Label="OpenApi Packages">
-    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
-    <PackageVersion Include="Microsoft.Extensions.ApiDescription.Server" Version="9.0.7">
+    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
+    <PackageVersion Include="Microsoft.Extensions.ApiDescription.Server" Version="9.0.8">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageVersion>
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageVersion Include="Scalar.AspNetCore" Version="2.6.7" />
-    <PackageVersion Include="Scalar.AspNetCore.Microsoft" Version="2.6.7" />
+    <PackageVersion Include="Scalar.AspNetCore" Version="2.6.9" />
+    <PackageVersion Include="Scalar.AspNetCore.Microsoft" Version="2.6.9" />
   </ItemGroup>
   <ItemGroup Label="General Test Packages">
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
