--- a/src/DevTKSS.MyManufacturerERP/DevTKSS.MyManufacturerERP.csproj
+++ b/src/DevTKSS.MyManufacturerERP/DevTKSS.MyManufacturerERP.csproj
@@ -5,9 +5,9 @@
     <OutputType>Exe</OutputType>
     <UnoSingleProject>true</UnoSingleProject>
     <!-- Display name -->
-    <ApplicationTitle>DevTKSS.MyManufacturerERP</ApplicationTitle>
+    <ApplicationTitle>devtkss.mymanufacturererp</ApplicationTitle>
     <!-- App Identifier -->
-    <ApplicationId>com.DevTKSS.MyManufacturerERP</ApplicationId>
+    <ApplicationId>com.devtkss.mymanufacturererp</ApplicationId>
     <!-- Versions -->
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
     <ApplicationVersion>1</ApplicationVersion>
