--- a/src/DevTKSS.MyManufacturerERP/DevTKSS.MyManufacturerERP.csproj
+++ b/src/DevTKSS.MyManufacturerERP/DevTKSS.MyManufacturerERP.csproj
@@ -57,9 +57,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DevTKSS.Extensions.OAuth\DevTKSS.Extensions.OAuth.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Presentation\AuthPage.xaml.cs">
       <DependentUpon>AuthPage.xaml</DependentUpon>
     </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
   <!--<ItemGroup>
